# randa

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.url  pyproject.toml
.github/workflows/: schedule.yml  workflow.yml
bootstrap/poetry/: install-poetry.py
docs/: README.md
src/randa/: __init__.py  __main__.py  client.py  main.py
